# ckka

./: README.md  ckka_spec.md  numeral.md  sample1.txt  sample2.txt
cetkaik_kiaak/src/: movement.rs
cetkaik_kiaak_rust/: Cargo.toml
cetkaik_kiaak_rust/src/: body.rs  header.rs  lib.rs  movement.rs  tests.rs
cetkaik_kiaak_rust/src/body/: mod.rs  movement.rs
cetkaik_kiaak_rust/src/header/: mod.rs  tests_.rs
cetkaik_kiaak_rust/src/pekzep_numeral/: mod.rs  tests.rs
ckka_rust/: Cargo.toml
ckka_rust/src/: header.rs  lib.rs  movement.rs  tests.rs
ckka_rust/src/pekzep_numeral/: mod.rs  tests.rs
