[package]
authors = ["sozysozbot <sozysozbot@gmail.com>"]
edition = "2018"
name = "cetkaik_kiaak"
version = "0.1.9"
description = "See https://sites.google.com/view/cet2kaik/the-standardized-rule-in-english and https://github.com/jurliyuuri/ckka for context."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
big_s = "1.0.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
nom = {version = "7.0.0", features = ["alloc"]}
regex = "1.5.4"
cetkaik_core = "0.3.8"
pekzep_numeral = "0.2.0"
